--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Where's Waldo",
+  "name": "Where's Waldo Photo Tagging App",
   "icons": [
     {
       "src": "favicon.ico",
